--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,151 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.page-container {
+  display: flex;
+  float: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  justify-content: center;
+  width: auto;
+  min-height: 100vh;
+
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+
+  font-family: Arial, serif;
   text-align: center;
+  font-weight: 300;
+  font-size: 14pt;
+  background-color: rgba(0, 0, 0, 1);
+  color: rgb(255, 255, 255);
+
+  white-space: pre-wrap;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar-container {
+  position: absolute;
+  display: flex;
+  float: center;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  justify-content: space-between;
+  width: 95%;
+
+  top: 0px;
+  left: auto;
+  right: auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background-1 {
+  background: linear-gradient(180deg, rgba(39, 15, 56, 1) 12.61% 12.61%, rgba(18, 23, 73, 1) 63.06% 63.06%, rgba(39, 15, 56, 1) 100% 100%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.background-2 {
+  background:  linear-gradient(180deg, rgba(39, 15, 56, 1) 12.61% 12.61%, rgba(18, 23, 73, 1) 63.06% 63.06%);
 }
 
-.card {
-  padding: 2em;
+.row-container {
+  display: flex;
+  float: center;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  justify-content: center;
 }
 
-.read-the-docs {
-  color: #888;
+.add-gaps {
+  gap: 16pt;
+}
+
+.content-box {
+  padding: 4pt;
+}
+
+.emphasis-text {
+  font-family: 'Impact';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48pt;
+  line-height: auto;
+  white-space: nowrap;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.text-spacer {
+  width: 12pt;
+  height: 100%;
+}
+
+.line-spacer {
+  flex-grow: 1;
+  height: 50pt;
+  width: 100%;
+}
+
+.accent-text {
+  color: rgb(245, 145, 40);
+}
+
+.secondary-text {
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14pt;
+  line-height: auto;
+  text-align: center;
+
+  color: rgba(200, 200, 200, 1);
+}
+
+.navbar-name {
+  font-family: 'Impact';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24pt;
+  line-height: auto;
+  white-space: nowrap;
+  text-align: left;
+  color: #ffffff;
+}
+
+.navbar-button {
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20pt;
+  line-height: auto;
+  white-space: nowrap;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.redirect-button {
+  background-color: rgba(44, 58, 141, 1);
+  width: 25%;
+  border-radius: 12pt;
+  border-width: 0px;
+
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16pt;
+  line-height: auto;
+  white-space: nowrap;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.display-panel {
+  display: block;
+  width: 45vw;
+  background-color: rgba(30, 43, 111, 1);
+  border: 3px solid rgba(255, 255, 255, 1);
+  min-height: 75vh;
 }
